# dmn

./: LICENSE.md  README.md  dmn.sublime-project  mise.toml  pyproject.toml
hooks/: pre-commit
scripts/: client.py
src/dmn/: __main__.py  attach.py  config.py  event_loop.py  exceptions.py  main.py  protocols.py  pty_session.py  terminal_bridge.py
src/dmn/api/: dispatcher.py  protocol.py
src/dmn/api/handlers/: base.py  exec.py
src/dmn/tasks/: __init__.py  handle_sigwinch_task.py  handle_sock_connection_task.py  pty_task.py  stdin_read_task.py  stdout_write_task.py  unix_server_task.py
tests/: test_backpressure.py  test_connection_task.py  test_dispatcher.py  test_event_loop.py  test_exec_handler.py  test_protocol.py
web/: bridge.py  index.html  package-lock.json  package.json
