[project]
name            = "dmn-pty"
version         = "1.0.0"
description     = "A lightweight PTY daemon with a Unix socket API for remote shell access"
readme          = "README.md"
requires-python = ">=3.14"
license         = "MIT"
license-files   = ["LICENSE.md"]
authors         = [{ name = "guille" }]
classifiers     = [
  "License :: OSI Approved :: MIT License",
]
urls.homepage   = "https://github.com/guille/dmn"

[project.scripts]
dmn        = "dmn.main:main"
dmn-attach = "dmn.attach:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
exclude           = ["**/__pycache__", "scripts/**", ".*/**", ".*"]
reportExplicitAny = false

[tool.hatch.build.targets.wheel]
packages = ["src/dmn"]

[[tool.uv.index]]
name        = "testpypi"
url         = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit    = true
